# PentominoSolver

./: README.md
haskell/: CHANGELOG.md  README.md  package.yaml  pentomino-solver.cabal
haskell/app/: Main.hs
haskell/src/: Pentomino.hs  Solver.hs  Util.hs
java/: Makefile
java/src/: PentominoSolver.java
java/src/pentomino/: BitBoard.java  BoardConfig.java  PieceArrange.java  Solver.java
java/src/pentomino/component/: OriginalShape.java  Piece.java  Shape.java
python/: main.py  piece.py  pulp_solver.py  z3_solver.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/pentomino/: mod.rs  piece.rs  shape.rs
rust/src/pentomino/solver/: dlx_solver.rs  mod.rs  naive_solver.rs
