[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
dancing-links = { version = "0.2.0", git = "https://github.com/tyfkda/dancing-links.git", branch = "feature/fix-assert-fail" }
